[ADD] Review: Added Add and Edit Review Modal
Added UI for Add and Edit Review Modal

Created .js and .css files for UI and behaviours

--- a/Readiculous.WebApp/wwwroot/css/site.css
+++ b/Readiculous.WebApp/wwwroot/css/site.css
@@ -4,6 +4,8 @@
     --color-btn: #EDAEC0;
     --color-modal: #F8ECE9;
     --color-background: #F2EFF1;
+    --font-primary: 'Gentium Book Plus', serif;
+    --color-text-placeholder: rgba(39, 39, 42, 0.6); 
 }
 
 
