[ADD] Modal: Added Registration Successful Modal

--- a/Readiculous.WebApp/Views/Shared/_EditReviewModal.cshtml
+++ b/Readiculous.WebApp/Views/Shared/_EditReviewModal.cshtml
@@ -47,6 +47,6 @@
 
 @section Scripts {
     <script>
-        setRating(@Model.Rating); // Set stars on load
+        setRating(@Model.Rating); 
     </script>
 }
