--- a/Readiculous.WebApp/Views/Book/Index.cshtml
+++ b/Readiculous.WebApp/Views/Book/Index.cshtml
@@ -7,7 +7,7 @@
 
 @section Styles {
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="~/css/review-modal-styles.css" />
+    <link rel="stylesheet" href="~/css/modal-styles.css" />
 }
 
 <h1>Book Management</h1>
