--- a/Readiculous.WebApp/Views/Shared/_AddReviewModal.cshtml
+++ b/Readiculous.WebApp/Views/Shared/_AddReviewModal.cshtml
@@ -4,7 +4,7 @@
     <h5 class="modal-title">Add Review for @Model.BookTitle</h5>
 </div>
 
-<div class="modal-body review-modal-body">
+<div class="modal-body">
     <form id="addReviewForm">
         <input type="hidden" asp-for="ReviewId" />
         <input type="hidden" asp-for="BookId" />
@@ -40,7 +40,7 @@
 
         <div class="d-flex justify-content-end gap-2">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-            <button type="submit" class="btn btn-success">Create</button>
+            <button type="submit" class="btn btn-primary">Create</button>
         </div>
     </form>
 </div>
