--- a/Readiculous.WebApp/Views/Shared/_EditUserModal.cshtml
+++ b/Readiculous.WebApp/Views/Shared/_EditUserModal.cshtml
@@ -1,12 +1,33 @@
-﻿@model Readiculous.Services.ServiceModels.UserViewModel
+﻿@model Readiculous.Services.ServiceModels.EditUserViewModel
 
 <div class="modal-header">
     <h5 class="modal-title">Edit User - @Model.Username</h5>
 </div>
 
 <div class="modal-body">
-    <form id="editUserForm" enctype="multipart/form-data">
+    <form id="editUserForm" asp-controller="User" asp-action="EditAsync" method="post" enctype="multipart/form-data">
         <input type="hidden" asp-for="UserId" />
+
+        <div class="position-relative text-center mb-5" style="height: 120px;">
+            <!-- Banner -->
+            <div class="rounded-4 position-absolute top-0 start-50 translate-middle-x"
+                 style="width: 100%; height: 125px; z-index: 0; background-color: var(--color-header)"></div>
+
+            <!-- Profile Image -->
+            @if (string.IsNullOrEmpty(Model.ProfilePictureUrl))
+            {
+                <img src="~/img/profile-logo.png" alt="Default Picture"
+                     class="rounded-circle img-thumbnail position-absolute start-50 translate-middle-x"
+                     style="width: 150px; height: 150px; top: 20px; z-index: 1;" />
+            }
+            else
+            {
+                <img src="@Model.ProfilePictureUrl" alt="Current Picture"
+                     class="rounded-circle img-thumbnail position-absolute start-50 translate-middle-x"
+                     style="width: 150px; height: 150px; top: 20px; z-index: 1;" />
+            }
+        </div>
+
 
         <div class="mb-3">
             <label asp-for="Username" class="form-label"></label>
@@ -27,16 +48,15 @@
         </div>
 
         <div class="mb-3">
+            <label asp-for="ConfirmPassword" class="form-label"></label>
+            <input asp-for="ConfirmPassword" class="form-control" type="password" />
+            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+        </div>
+
+        <div class="mb-3">
             <label asp-for="ProfilePicture" class="form-label">Profile Picture</label>
             <input asp-for="ProfilePicture" type="file" class="form-control" />
             <span asp-validation-for="ProfilePicture" class="text-danger"></span>
-
-            @if (!string.IsNullOrEmpty(Model.ProfilePictureUrl))
-            {
-                <div class="mt-2">
-                    <img src="@Model.ProfilePictureUrl" alt="Current Picture" class="img-thumbnail" style="width: 100px; height: 100px;" />
-                </div>
-            }
         </div>
 
         <div class="d-flex justify-content-end gap-2">
@@ -45,4 +65,3 @@
         </div>
     </form>
 </div>
-
