--- a/Readiculous.WebApp/Views/User/Index.cshtml
+++ b/Readiculous.WebApp/Views/User/Index.cshtml
@@ -7,7 +7,7 @@
 
 @section Styles {
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="~/css/review-modal-styles.css" />
+    <link rel="stylesheet" href="~/css/modal-styles.css" />
 }
 
 <div class="modal fade" id="editUserModal" tabindex="-1" aria-hidden="true">
@@ -16,6 +16,16 @@
         </div>
     </div>
 </div>
+
+<!-- Registration Success Modal -->
+<div class="modal fade" id="registrationModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content" id="registrationModalContent">
+            <!-- Partial view content will be loaded here -->
+        </div>
+    </div>
+</div>
+
 
 <h1>User Management</h1>
 
@@ -103,8 +113,7 @@
                     <td>
                         <a href="javascript:void(0)" class="btn btn-sm btn-warning"
                            onclick="openEditUserModal('@item.UserId')">Edit User</a>
-                        <a asp-action="Edit" asp-route-userId="@item.UserId" class="btn btn-sm btn-info">Edit</a> |
-                        <a asp-action="Details" asp-route-userId="@item.UserId" class="btn btn-sm btn-secondary">Details</a> |
+                        <a href="javascript:void(0)" class="btn btn-sm btn-secondary" onclick="openRegistrationModal('@item.UserId')">Details</a> |
                         <a asp-action="Delete" asp-route-userId="@item.UserId" class="btn btn-sm btn-danger">Delete</a>
                     </td>
                 </tr>
@@ -126,4 +135,6 @@
         });
     </script>
     <script src="~/js/user.js"></script>
+
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
