--- a/Readiculous.WebApp/Views/Shared/_HeaderTest.cshtml
+++ b/Readiculous.WebApp/Views/Shared/_HeaderTest.cshtml
@@ -20,7 +20,7 @@
                 <ul>
                     <li>
                         <i class="fa-solid fa-gear"></i>
-                        <a href="#">Settings</a>
+                        <a class="open-edit-profile">Edit Profile</a>
                     </li>
                     <li>
                         <i class="fa-solid fa-right-from-bracket"></i>
