--- a/Readiculous.WebApp/Views/Shared/_HeaderTest.cshtml
+++ b/Readiculous.WebApp/Views/Shared/_HeaderTest.cshtml
@@ -31,6 +31,10 @@
                         <a asp-controller="UserMaster" asp-action="UserMasterScreen">User Master</a>
                     </li>
                     <li class="nav-item">
+                        <i class="fa-solid fa-book"></i>
+                        <a asp-controller="BookMaster" asp-action="BookMasterScreen">Book Master</a>
+                    </li>
+                    <li class="nav-item">
                         <i class="fa-solid fa-users"></i>
                         <a asp-controller="User" asp-action="Index">User</a>
                     </li>
