--- a/Readiculous.WebApp/Views/Home/Index.cshtml
+++ b/Readiculous.WebApp/Views/Home/Index.cshtml
@@ -2,6 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 
+@section Styles {
+    <link href="~/css/modal-styles.css" rel="stylesheet" />
+}
+
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
@@ -10,3 +14,4 @@
 @section Scripts {
     <script src="~/js/site.js" asp-append-version="true"></script>
 }
+
